@@ -15,6 +15,7 @@ CHANGELOG and HISTORY ( we try )                                         Okatea
 ! superadmin can now remove admin logs
 - bug fixes introduced in the previous beta
 - remove buggy switch admin view feature
+- fix jQuery UI upload custom theme
 
 
 1.0.BETA.4 (14/11/2013)
